-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 15.0.0-beta1
-
-
22a4ff3be (15.0)
Steps to reproduce:
- do not have valgrind installed
- start QC, create / open some application
- switch to Debug view > choose Memcheck
/ Callgrind (depending on the build type) - hit the run button to start the analyzer
QC prints a message in Application Output
15:32:58: Valgrind executable "valgrind" not found or not executable.
Check settings or ensure Valgrind is installed and available in PATH.
But the Run button for valgrind never gets enabled again (and the enabled Stop button does nothing now)
There is no chance to get the valgrind part now working without restarting QC.
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTCREATORBUG-31817 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
597547,2 | Memcheck: Fix tool button enablement | 15.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |