Memcheck: Fix tool button enablement

Connect to RunContol's stopped() signal instead of
RunWorker's one. Make it consistent with what
CallgrindTool::setupRunner() does.

Fixes: QTCREATORBUG-31817
Change-Id: I3a9517be7ab689492a91cf962620336afa6d948f
Reviewed-by: Christian Stenger <christian.stenger@qt.io>